--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>7.0.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.3</version>
+        </dependency>
     </dependencies>
 
 </project>
